Fixed process script

--- a/bz-extension/popup.html
+++ b/bz-extension/popup.html
@@ -151,6 +151,9 @@ a{
     <div id="pageScriptPanel">
       <label style="height:15px;margin-left:5px;">Identify log page script:</label>
       <textarea id="identifyMaster"></textarea>
+
+      <label style="height:15px;margin-left:5px;">Line clear script:</label>
+      <textarea id="lineClear"></textarea>
     </div>
     <div style="margin:5px 0;">
       <label><input type="checkbox" id="retrieveWorkerLog"/><span style="position: relative;top: -2px;">Retrieve parallel test worker log</span></label>
