--- a/bz-extension/popup.html
+++ b/bz-extension/popup.html
@@ -38,7 +38,7 @@ textarea{
   padding: 5px;
   white-space: pre;
   width:calc(100% - 10px);
-  height:80px;
+  height:60px;
   margin:5px 0;
   resize: none;
 }
@@ -90,8 +90,8 @@ a{
 </head>
 <body>
   <div style="padding:10px;border-bottom:1px solid #CCC;margin-bottom:10px;white-space:nowrap;">
-    <a class="bz-tab bz-active" id="infoTab">Info</a>
-    <a class="bz-tab" id="ciTab">CI Setting</a>
+    <a class="bz-tab bz-active" id="infoTab">About</a>
+    <a class="bz-tab" id="ciTab">CI settings</a>
     <a class="bz-tab" id="logTab">Log formatter</a>
   </div>
   <div id="info-panel" class='bz-panel' style="width:200px;">
@@ -146,23 +146,27 @@ a{
   </div>
   <div id="log-panel" style="display:none;width:600px;" class='bz-panel'>
     <div style="margin-bottom:5px;">
-      <label><input type="checkbox" id="autoFormat"/><span style="position: relative;top: -2px;">Auto format</span></label>
+      <label><input type="checkbox" id="autoFormat"/><span style="position: relative;top: -2px;">Automatically run formatter for URLs matched by function</span></label><a class="bz-refresh-code" code="identifyMaster">Set to default</a>
     </div>
     <div id="pageScriptPanel">
-      <label style="height:15px;margin-left:5px;">Identify log page script:</label>
       <textarea id="identifyMaster"></textarea>
-
-      <label style="height:15px;margin-left:5px;">Line clear script:</label>
+    </div>
+    <div style="margin-bottom:5px;">
+      <label><input type="checkbox" id="lineClearChk"/><span style="position: relative;top: -2px;">Clean log entries using function</span></label><a class="bz-refresh-code" code="lineClear">Set to default</a>
+    </div>
+    <div id="lineClearScriptPanel">
       <textarea id="lineClear"></textarea>
     </div>
     <div style="margin:5px 0;">
-      <label><input type="checkbox" id="retrieveWorkerLog"/><span style="position: relative;top: -2px;">Retrieve parallel test worker log</span></label>
+      <label><input type="checkbox" id="retrieveWorkerLog"/><span style="position: relative;top: -2px;">Retrieve parallel test worker log using function</span></label><a class="bz-refresh-code" code="identifyWorker">Set to default</a>
     </div>
     <div id="workerScriptPanel">
-      <label style="height:15px;margin-left:5px;">Get parallel test worker log script</label>
-      <textarea id="identifyWorker"></textarea>
+      <textarea id="identifyWorker" style="height:85px;"></textarea>
     </div>
-    <fieldset style="border:1px solid #CCC">
+    <div style="margin:5px 0;">
+      <label><input type="checkbox" id="withToken"/><span style="position: relative;top: -2px;">Add secure token to screenshot URLs</span></label>
+    </div>
+    <fieldset style="border: 1px solid #666;margin-top: 10px;width: calc(100% - 18px);margin-left: 0;border-radius: 2px;">
       <legend>Performance thresholds:</legend>
       <div class="row">
         <div style="flex:1;display:flex;">  
@@ -187,7 +191,7 @@ a{
         </div>
       </div>
       <div style="font-style:italic;color:#666;margin-left:10px;">
-        Note: units in second
+        Note: units in seconds
       </div>
     </fieldset>
     <div style="margin:10px 5px 5px 5px;">
